--- a/views/firstWorkshop.ejs
+++ b/views/firstWorkshop.ejs
@@ -54,7 +54,7 @@
         </p>
       </section>
       <section class="workshop_section">
-          <div class="workshop_section__content_wrapper">
+          <!-- <div class="workshop_section__content_wrapper">
              <h1>Název workshopu</h1>
              <p>Popis workshopu. Lorem ipsum dolor sit amet, consectetuer adipiscing
                 elit. Curabitur sagittis hendrerit ante. Integer malesuada. Aliquam id
@@ -62,7 +62,7 @@
                 diam. Ut enim ad minima veniam, quis nostrum exercitationem ullam
                 corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                 consequatur?</p>
-          </div>
+          </div> -->
       </section>
     </main>
     <footer></footer>
