--- a/views/firstWorkshop.ejs
+++ b/views/firstWorkshop.ejs
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main>
-        <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" />
+      <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" />
 
       <section class="project_section">
         <h1 class="project_name_label">Projekt</h1>
@@ -54,15 +54,22 @@
         </p>
       </section>
       <section class="workshop_section">
-          <!-- <div class="workshop_section__content_wrapper">
-             <h1>Název workshopu</h1>
-             <p>Popis workshopu. Lorem ipsum dolor sit amet, consectetuer adipiscing
-                elit. Curabitur sagittis hendrerit ante. Integer malesuada. Aliquam id
-                dolor. Praesent in mauris eu tortor porttitor accumsan. Nulla quis
-                diam. Ut enim ad minima veniam, quis nostrum exercitationem ullam
-                corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                consequatur?</p>
-          </div> -->
+        <div class="workshop_section__content_wrapper">
+          <div class="first_workshop__item">
+            <div class="first_workshop__item--title_wrapper">
+              <h1 class="first_workshop__item--title_label">WORKSHOP</h1>
+              <h1 class="first_workshop__item--title">Motivační název</h1>
+            </div>
+            <p class="first_workshop__item--description">
+              Popis workshopu. Lorem ipsum dolor sit amet, consectetuer
+              adipiscing elit. Curabitur sagittis hendrerit ante. Integer
+              malesuada. Aliquam id dolor. Praesent in mauris eu tortor
+              porttitor accumsan. Nulla quis diam. Ut enim ad minima veniam,
+              quis nostrum exercitationem ullam corporis suscipit laboriosam,
+              nisi ut aliquid ex ea commodi consequatur?
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
