--- a/views/firstWorkshop.ejs
+++ b/views/firstWorkshop.ejs
@@ -68,10 +68,19 @@
               quis nostrum exercitationem ullam corporis suscipit laboriosam,
               nisi ut aliquid ex ea commodi consequatur?
             </p>
+            <div class="first_workshop__item--dates_title_wrapper">
+              <h1 class="first_workshop__item--dates">Termíny</h1>
+            </div>
+            <p class="first_workshop__item--date">12. prosince 2022</p>
+            <div class="first_workshop__item--dates_title_wrapper">
+              <h1 class="first_workshop__item--dates">Program</h1>
+            </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p class="footer-text">2022 © Univerzita Hradec Králové</p>
+    </footer>
   </body>
 </html>
