--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,20 @@ header {
   display: flex;
 }
 
+main {
+    padding-bottom: 2rem;
+}
+
+footer {
+    background-color: #3A4750;
+    text-align: center;
+}
+
+.footer-text {
+    color: white;
+    padding: 1rem;
+}
+
 .fim_uhk_logo {
   padding: 0.5rem;
   max-width: 20rem;
@@ -129,6 +143,21 @@ header {
 .first_workshop__item--description {
     padding-top: 0.5rem;
     font-weight: 300;
+}
+
+.first_workshop__item--dates_title_wrapper {
+    margin-top: 1rem;
+    border-left: 3px solid #009fdf;
+}
+
+.first_workshop__item--dates {
+    padding-left: 0.5rem;
+    font-weight: 500;
+}
+
+.first_workshop__item--date {
+    padding-top: 0.5rem;
+    font-weight: 600;
 }
 
 @media (min-width: 768px) {
