--- a/views/firstWorkshop.ejs
+++ b/views/firstWorkshop.ejs
@@ -18,6 +18,7 @@
   </head>
   <body>
     <header>
+      <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" />
       <div class="hamburger">
         <div class="hamburger_strip"></div>
         <div class="hamburger_strip"></div>
@@ -39,7 +40,7 @@
       </nav>
     </header>
     <main>
-      <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" />
+      <!-- <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" /> -->
 
       <section class="project_section">
         <h1 class="project_name_label">Projekt</h1>
