--- a/views/firstWorkshop.ejs
+++ b/views/firstWorkshop.ejs
@@ -17,6 +17,14 @@
     <title>První workshop</title>
   </head>
   <body>
+    <!-- <div class="backdrop"></div> -->
+    <nav class="mobile_main_nav">
+      <ul class="mobile_main_nav__links">
+        <li class="mobile_main_nav__link">O projektu</li>
+        <li class="mobile_main_nav__link">Workshopy</li>
+        <li class="mobile_main_nav__link">Výstupy</li>
+      </ul>
+    </nav>
     <header>
       <img class="fim_uhk_logo" src="/img/fim-uhk-cs_hor.svg" alt="" />
       <div class="hamburger">
@@ -24,16 +32,9 @@
         <div class="hamburger_strip"></div>
         <div class="hamburger_strip"></div>
       </div>
-      <!-- <nav class="mobile_main_nav">
-        <ul class="mobile_main_nav__links">
-          <li class="mobile_main_nav__link active_link">O projektu</li>
-          <li class="mobile_main_nav__link">Workshopy</li>
-          <li class="mobile_main_nav__link">Výstupy</li>
-        </ul>
-      </nav> -->
       <nav class="main_nav">
         <ul class="main_nav__links">
-          <li class="main_nav__link active_link">O projektu</li>
+          <li class="main_nav__link">O projektu</li>
           <li class="main_nav__link">Workshopy</li>
           <li class="main_nav__link">Výstupy</li>
         </ul>
